# TextureUpload

./: .gitmodules  CMakeLists.txt
ext/xbyak/: readme.txt
include/: UploadBuffer.h
src/: GSAlignedClass.h  GSClut.cpp  GSExtra.h  GSLocalMemory.cpp  GSLocalMemory.h  TextureUpload.cpp  TextureUpload.h  UploadBuffer.cpp
src/common/: Assertions.h  Pcsx2Defs.h  Pcsx2Types.h  VectorIntrin.h
